@@ -1,0 +1,6 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope">
+
+    <include package=".izug4" />
+
+</configure>
