@@ -2,8 +2,5 @@
 <object name="portal_css">
   <stylesheet title="" cacheable="True" compression="safe"
      conditionalcomment="" cookable="True" enabled="on" expression=""
-     id="izug4.css" media="screen" rel="stylesheet" rendering="import"/>
-  <stylesheet title="" cacheable="True" compression="safe"
-     conditionalcomment="" cookable="True" enabled="on" expression=""
      id="tabbedview.css" media="screen" rel="stylesheet" rendering="import"/>
 </object>
